use parent pom with spring related dependencies versions