@@ -30,7 +30,6 @@ package es.org.cxn.backapp.service.impl;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -61,7 +60,7 @@ public final class DefaultImageStorageService implements ImageStorageService {
      */
     @Override
     public void deleteImage(final String baseDirectory, final String imagePath) throws IOException {
-        final Path path = Paths.get(baseDirectory, imagePath);
+        final Path path = Path.of(baseDirectory, imagePath);
         Files.deleteIfExists(path);
     }
 
@@ -75,7 +74,7 @@ public final class DefaultImageStorageService implements ImageStorageService {
      */
     @Override
     public byte[] loadImage(final String imagePath) throws IOException {
-        final Path path = Paths.get(imagePath);
+        final Path path = Path.of(imagePath);
         return Files.readAllBytes(path);
     }
 
@@ -95,7 +94,7 @@ public final class DefaultImageStorageService implements ImageStorageService {
     @Override
     public String saveImage(final MultipartFile file, final String baseDirectory, final String entityType,
             final String entityId) throws IOException {
-        final Path directoryPath = Paths.get(baseDirectory, entityType, entityId);
+        final Path directoryPath = Path.of(baseDirectory, entityType, entityId);
         Files.createDirectories(directoryPath);
         final Path filePath = directoryPath.resolve(file.getOriginalFilename());
         file.transferTo(filePath.toFile());
